LU-8774 lprocfs: not use MAX_STRING_SIZE in copy_from_user

This patch removes using MAX_STRING_SIZE in copy_from_user()
and just copies enough bytes to cover count passed in.

Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: I1ac2c779b5cd984f88bb85d4ae8d571f7931091f