lustre/obdclass/lprocfs_status.c
@@ -296,20 +296,23 @@ EXPORT_SYMBOL(lprocfs_uint_seq_show);
 int lprocfs_wr_uint(struct file *file, const char __user *buffer,
                     unsigned long count, void *data)
 {
-        unsigned *p = data;
-        char dummy[MAX_STRING_SIZE + 1], *end;
-        unsigned long tmp;
+	unsigned	*p = data;
+	char		 dummy[MAX_STRING_SIZE + 1] = { 0 };
+	char		*end;
+	unsigned long	 tmp;
 
-        dummy[MAX_STRING_SIZE] = '\0';
-	if (copy_from_user(dummy, buffer, MAX_STRING_SIZE))
-                return -EFAULT;
+	if (count >= sizeof(dummy) || count == 0)
+		return -EINVAL;
 
-        tmp = simple_strtoul(dummy, &end, 0);
-        if (dummy == end)
-                return -EINVAL;
+	if (copy_from_user(dummy, buffer, count))
+		return -EFAULT;
 
-        *p = (unsigned int)tmp;
-        return count;
+	tmp = simple_strtoul(dummy, &end, 0);
+	if (dummy == end)
+		return -EINVAL;
+
+	*p = (unsigned int)tmp;
+	return count;
 }
 EXPORT_SYMBOL(lprocfs_wr_uint);
 
